k8s/apps/external/grafana/endpoint-slice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: grafana
  namespace: grafana
  labels:
    kubernetes.io/service-name: grafana
    endpointslice.kubernetes.io/managed-by: cluster-admins
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 3000
endpoints:
  - addresses:
      - 192.168.1.24
    conditions: { }
