k8s/apps/external/grafana/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: grafana
spec:
  ports:
    - name: http
      protocol: TCP
      port: 3000
