k8s/apps/external/grafana/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: grafana
spec:
  parentRefs:
    - name: external
      namespace: gateway
    - name: internal
      namespace: gateway
  hostnames:
    - "grafana.ravil.space"
  rules:
    - backendRefs:
        - name: grafana
          port: 3000
